Fix width of wrap in animated carousel

--- a/animated-carousel/style.css
+++ b/animated-carousel/style.css
@@ -66,7 +66,7 @@
 .slider .item .content .wrap {
     font-family: "Neue World Condensed";
     letter-spacing: -10px;
-    max-width: 900px;
+    max-width: 1024px;
     text-align: center;
 }
 
